# ebook-api

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.agent  README.md  THE_PROCESS_TEMPLATE.md  docker-compose.yml  entrypoint.sh  langgraph.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.build.json
agent-server/: Dockerfile  package-lock.json  package.json  tsconfig.json
agent-server/src/: index.ts
agent-ts/: langgraph.json  package-lock.json  package.json  tsconfig.json
agent-ts/src/: agent.ts
ai-agent-python/: .gitignore  Dockerfile  draw_graph.py  graph.py  langgraph.json  main.py  pyproject.toml  render.yaml  requirements.txt  requirements_backup.txt  state.py  util.py
ai-agent-python-v2/: Dockerfile  agent.py  auth_context.py  config.py  graph.py  langgraph.json  main.py  pyproject.toml  requirements.txt  state.py
ai-agent-python-v2/subgraphs/: stats_subgraph.py
ai-agent-python-v2/tools/: book_tool.py  statstools.py
ai-agent-python/subgraphs/: book_subgraph.py  stats_subgraph.py
ai-agent-python/tools/: book_tool.py  booktool.py  get_state.py  statstools.py  tavily_extract.py  tavily_search.py
prisma/: schema.prisma
prisma/migrations/20260114142610_new_2/: migration.sql
prisma/migrations/20260115134934_new_3/: migration.sql
prisma/migrations/20260117102008_update_fied/: migration.sql
prisma/migrations/20260118053343_update_new/: migration.sql
src/: app.module.ts  main.ts
src/agent/: agent.ts  langgraph.json  package-lock.json  package.json
src/agent/config/: config.ts
test/: app.e2e-spec.ts
(+90 files in other folders)
